# MultiGen3D

./: .gitignore  LICENSE  README.md  baseline.py  clip_scores.json  commands.md  commands.txt  decode_composite.py  local_sq.py  multigen.py  run_approach1_vs5.sh  run_approach1_vs6.sh  run_benchmark_approach5.sh  run_benchmark_approach6.sh  run_benchmark_approach7.sh  run_benchmark_baseline.sh  run_clip.sh  run_gen_sq_assignment.sbatch  run_hard_cases.sh  run_local_sq_benchmark.sbatch  sq_utils.py
superdec/: .gitignore  LICENSE  README.md  SETUP.md  demo_planning.py  demo_viser.py  pyproject.toml  requirements.txt  setup_sampler.py
superdec/configs/: eval.yaml  object_visualizer.yaml  save_npz.yaml  train.yaml
superdec/data/ShapeNet/: candidates.json
superdec/data/dataset_20/: manifest.json
superdec/examples/: room0.npz
superdec/scripts/: download_checkpoints.sh  download_shapenet.sh  finalize_dataset.py  preview_sqs.py  run_candidates.py  run_candidates.sbatch  run_candidates_3new.sbatch  run_on_scene.sh  run_on_shapenet.sh  sq_editor.py
superdec/superdec/: superdec.py
superdec/superdec/data/: dataloader.py  downsample_shapenet.py  transform.py
superdec/superdec/evaluate/: evaluate.py  to_npz.py
superdec/superdec/fast_sampler/: _sampler.pyx  sampling.hpp
superdec/superdec/functional/: __init__.py  backend.py  devoxelization.py  voxelization.py
superdec/superdec/lm_optimization/: lm_optimizer.py
superdec/superdec/loss/: loss.py  (+1 more)
superdec/superdec_planner/: rrt_superdec.py  superdec.py  vis_utils.py
superdec/train/: train.py  trainer.py  utils.py
(+144 files in other folders)
